[tool.poetry]
name = "Datacollect"
version = "0.0.0"
description = "Simulation environment for data collection."
authors = ["Lasse F. Wolff Anthony <lfwa@proton.me>"]
readme = "README.md"
license = "BSD-3-Clause"
homepage = "https://lfwa.github.io/datacollect/"
repository = "https://github.com/lfwa/datacollect"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pettingzoo = "^1.22.2"
pygame = "^2.1.2"
numpy = "^1.23.5"
gymnasium = "^0.27.1"
matplotlib = "^3.6.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
pytest = "^7.2.0"
isort = "^5.11.4"
pre-commit = "^2.21.0"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.5"
pymdown-extensions = "^9.9.1"
mkdocstrings = { extras = ["python"], version = "^0.19.1" }
importlib-metadata = "^6.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
